--- a/App/SpartanRide/package.json
+++ b/App/SpartanRide/package.json
@@ -18,7 +18,12 @@
     "@babel/runtime": "7.12.13",
     "@react-native-community/eslint-config": "1.1.0",
     "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
+    "eslint": "^7.20.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
     "react-test-renderer": "16.13.1"
